tests/tests/ui/projection_method_collision_many.stderr
error: use of deprecated function `_::insert`: generated method `insert()` for field `insert` on `Widget` shadows built-in method. Use `.select(Widget::fields().insert())` to project this field.
  --> tests/ui/projection_method_collision_many.rs:13:5
   |
13 |     insert: String,
   |     ^^^^^^
   |
note: the lint level is defined here
  --> tests/ui/projection_method_collision_many.rs:6:9
   |
 6 | #![deny(deprecated)]
   |         ^^^^^^^^^^
